--- a/web/hub/lng_gas/article1/index.html
+++ b/web/hub/lng_gas/article1/index.html
@@ -24,9 +24,12 @@
 </head>
 
 <body>
+<main id="article" class="scrollAnimate" data-market-name="LNG & GAS" data-market="lng_gas"  data-views="page-article">
+    <section class="main-section">
+   
+    </section>
+</main>
 
-    <main id="articles">[object HTMLElement]</main>
-    
     <script src="./assets/app.js" type="module"></script>
 </body>
 </html>
