--- a/web/hydrogen/index.html
+++ b/web/hydrogen/index.html
@@ -24,9 +24,21 @@
 </head>
 
 <body>
+<main id="market" data-market-name="LNG & GAS" data-market="lng_gas" data-views="page-market">
+    <section class="main-section">
+        <header class="hero">
+            <h1>undefined</h1>
 
-    <main id="market">[object HTMLElement]</main>
-    
+            <div class="baseline">
+                undefined
+                <svg width="12" height="12">
+                    <circle fill="#fff" cx="6" cy="6" r="6" />
+                </svg>
+            </div>
+        </header>
+    </section>
+</main>
+
     <script src="./assets/app.js" type="module"></script>
 </body>
 </html>
