--- a/web/index.html
+++ b/web/index.html
@@ -24,20 +24,9 @@
 </head>
 
 <body>
-<main id="market" data-market-name="LNG & GAS" data-market="lng_gas" data-views="page-market">
-    <section class="main-section">
-        <header class="hero">
-            <h1>Where energies make tomorrow</h1>
 
-            <div class="baseline">
-                undefined
-                <svg width="12" height="12">
-                    <circle fill="#fff" cx="6" cy="6" r="6" />
-                </svg>
-            </div>
-        </header>
-    </section>
-</main>
+ <div class="page"></div>
+
 
     <script src="./assets/app.js" type="module"></script>
 </body>
